# NikiScriptC

./: CMakeLists.txt  README.md  TODO.md  build.sh  build_static.sh  run.bat
doxygen/: Doxyfile  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only-darkmode-toggle.css  doxygen-awesome-sidebar-only.css  doxygen-awesome-tabs.js  doxygen-awesome.css
doxygen/doxygen-custom/: header.html
example/: CMakeLists.txt
example/src/: example.c
src/: Command.c  Command.cpp  Command.h  CommandHandler.c  CommandHandler.h  Context.c  Context.h  Lexer.c  Lexer.h  NikiScript.c  NikiScript.cpp  NikiScript.h  Parser.c  Parser.cpp  Parser.h  PrintCallback.c  PrintCallback.h  ProgramVariable.c  ProgramVariable.h  Token.c  Token.h  Utils.c  Utils.h
